--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,37 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
 
-body, html {
+:root {
+    --azul-claro : #434992;
+    --azul-escuro: #102438;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body, html {
+    scroll-behavior: smooth;
+}
+
+header {
     font-family: 'Rubik', sans-serif;
 }
 
 header > div {
-    width: 95%;
-    margin: 0 auto;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 header > div > figure {
     display: flex;
     align-items: center;
-    margin: 0;
 }
 
 header > div img {
@@ -52,6 +63,12 @@ form.campo-pesquisa button {
     background: transparent;
     color: #ccc;
     width: 40px;
+    margin-left: 1px;
+}
+
+form.campo-pesquisa button > i {
+    cursor: pointer;
+    color: var(--azul-claro);
 }
 
 div > span#btnMenu {
@@ -60,7 +77,7 @@ div > span#btnMenu {
 }
 
 nav#menu {
-    background-color: cornflowerblue;
+    background-color: var(--azul-claro);
     display: none;
     padding-top: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
@@ -69,8 +86,6 @@ nav#menu {
 nav#menu > ul {
     text-align: center;
     list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 nav#menu > ul li a {
@@ -78,10 +93,11 @@ nav#menu > ul li a {
     padding: 15px 20px;
     color: white;
     text-decoration: none;
+    transition: .25s;
 }
 
 nav#menu > ul li a:hover {
-    background-color: blue;
+    background-color: #32376a;
 }
 
 nav#menu > form.campo-pesquisa {
@@ -96,9 +112,94 @@ nav#menu > form.campo-pesquisa {
     display: block;
 }
 
+/* Fim Header */
+
+main {
+    font-family: 'Inter', sans-serif;
+}
+
+article.categoria h1 {
+    text-align: center;
+    padding: 25px 0;
+    color: var(--azul-escuro);
+}
+
+section.parallax {
+    background-size: cover;
+    background-attachment: fixed;
+    height: 300px;
+}
+
+section#carnes {
+    background-image: url(../assets/img/carnes.jpg);
+    background-position: center center;
+}
+
+section.produtos {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+section.produtos > figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    margin: 5px;
+}
+
+section.produtos > figure div.img {
+    height: 150px;
+    max-width: 300px;
+}
+
+section.produtos > figure div img {
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+
+section.produtos > figure figcaption {
+    text-align: center;
+    padding: 10px 15px;
+}
+
+section.produtos > figure p {
+    font-size: 1.7em;
+    padding: 10px 0;
+}
+
+section.produtos > figure button span {
+    vertical-align: middle;
+    padding-right: 10px;
+}
+
+section.produtos > figure button {
+    padding: 5px 0;
+    width: 90%;
+    border: 1px solid var(--azul-escuro);
+    border-radius: 10px;
+    background-color: var(--azul-claro);
+    color: white;
+    cursor: pointer;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    transition: .25s;
+}
+
+section.produtos > figure button:hover {
+    background-color: #fff;
+    color: var(--azul-escuro);
+}
+
 @media screen and (min-width: 768px) {
     header > div {
         justify-content: space-around;
+        padding: 0;
     }
 
     div > form.campo-pesquisa {
