--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,12 @@ section.produtos > figure div img {
 }
 
 section.produtos > figure figcaption {
-    text-align: center;
+    text-align: justify;
     padding: 10px 15px;
 }
 
 section.produtos > figure p {
-    font-size: 1.7em;
+    font-size: 1.5em;
     padding: 10px 0;
 }
 
