--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ main {
 article.categoria h1 {
     text-align: center;
     padding: 25px 0;
+    font-size: 2em;
     color: var(--azul-escuro);
 }
 
@@ -145,7 +146,7 @@ section.produtos > figure {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0 10px 0;
     border: 1px solid #ccc;
     border-radius: 15px;
     margin: 5px;
@@ -154,6 +155,7 @@ section.produtos > figure {
 section.produtos > figure div.img {
     height: 150px;
     max-width: 300px;
+    padding: 0 10px;
 }
 
 section.produtos > figure div img {
@@ -165,12 +167,13 @@ section.produtos > figure div img {
 
 section.produtos > figure figcaption {
     text-align: justify;
-    padding: 10px 15px;
+    margin-top: 25px;
+    padding: 0 15px;
 }
 
 section.produtos > figure p {
     font-size: 1.5em;
-    padding: 10px 0;
+    padding: 20px 0;
 }
 
 section.produtos > figure button span {
@@ -194,6 +197,10 @@ section.produtos > figure button {
 section.produtos > figure button:hover {
     background-color: #fff;
     color: var(--azul-escuro);
+}
+
+section#margarinas {
+    background-image: url(../assets/img/margarinas.jpg);
 }
 
 @media screen and (min-width: 768px) {
