--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ section.parallax {
 }
 
 section#carnes {
-    background-image: url(../assets/img/carnes.jpg);
+    background-image: url(../assets/img/carnes1.jpg);
     background-position: center center;
 }
 
@@ -152,13 +152,10 @@ section.produtos > figure {
     margin: 5px;
 }
 
-section.produtos > figure div.img {
-    height: 150px;
-    max-width: 300px;
-    padding: 0 10px;
-}
-
 section.produtos > figure div img {
+    padding: 0 10px;
+    max-height: 200px;
+    max-width: 300px;
     height: 100%;
     width: 100%;
     display: block;
@@ -200,7 +197,8 @@ section.produtos > figure button:hover {
 }
 
 section#margarinas {
-    background-image: url(../assets/img/margarinas.jpg);
+    background-image: url(../assets/img/margarinas1.jpg);
+    background-position: center center;
 }
 
 @media screen and (min-width: 768px) {
