--- a/css/style.css
+++ b/css/style.css
@@ -152,13 +152,10 @@ section.produtos > figure {
     margin: 5px;
 }
 
-section.produtos > figure div.img {
-    height: 150px;
-    max-width: 300px;
-    padding: 0 10px;
-}
-
 section.produtos > figure div img {
+    padding: 0 10px;
+    max-height: 200px;
+    max-width: 300px;
     height: 100%;
     width: 100%;
     display: block;
@@ -201,6 +198,7 @@ section.produtos > figure button:hover {
 
 section#margarinas {
     background-image: url(../assets/img/margarinas.jpg);
+    background-position: center center;
 }
 
 @media screen and (min-width: 768px) {
