--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ section.parallax {
 }
 
 section#carnes {
-    background-image: url(../assets/img/carnes1.jpg);
+    background-image: url(../assets/img/carnes.jpg);
     background-position: center center;
 }
 
