--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ article.categoria h1 {
 section.parallax {
     background-size: cover;
     background-attachment: fixed;
+    background-position: center center;
     height: 300px;
 }
 
@@ -139,6 +140,7 @@ section#carnes {
 section.produtos {
     display: grid;
     grid-template-columns: 50% 50%;
+    margin-bottom: 25px;
 }
 
 section.produtos > figure {
@@ -150,6 +152,10 @@ section.produtos > figure {
     border: 1px solid #ccc;
     border-radius: 15px;
     margin: 5px;
+}
+
+section.produtos > figure div.img {
+    height: 210px;
 }
 
 section.produtos > figure div img {
@@ -199,7 +205,6 @@ section.produtos > figure button:hover {
 
 section#margarinas {
     background-image: url(../assets/img/margarinas.jpg);
-    background-position: center center;
 }
 
 section#graos {
@@ -208,7 +213,15 @@ section#graos {
 
 section#temperos {
     background-image: url(../assets/img/temperos.jpg);
-    background-position: center center;
+}
+
+section#doces {
+    background-image: url(../assets/img/doces.jpg);
+}
+
+section#bebidas {
+    background-image: url(../assets/img/bebidas.jpg);
+   
 }
 
 @media screen and (min-width: 768px) {
