--- a/css/style.css
+++ b/css/style.css
@@ -334,9 +334,9 @@ section.contato > form input[type=submit]:hover {
 footer {
     background-color: var(--azul-escuro);
     padding-top: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 100%;
+    align-content: center;
     font-family: 'Rubik', sans-serif;
 }
 
@@ -344,12 +344,12 @@ footer div {
     text-align: center;
 }
 
-footer h2 {
+div.redes h2 {
     color: white;
     font-size: 1.7em;
 }
 
-footer div.redes i {
+div.redes i {
     display: inline-block;
     font-size: 1.5em;
     margin: 15px;
@@ -360,26 +360,24 @@ footer div.redes i {
     cursor: pointer;
 }
 
-footer div.redes i::before {
+div.redes i::before {
     width: 24px;
     display: inline-block;
 }
 
-footer div.links {
+div.links {
     display: flex;
     flex-direction: column; 
-    margin-right: 90px;
-    text-align: left;
 }
 
-footer div.links a {
+div.links a {
     display: inline-block;
     padding: 5px;
     color: #ccc;
     text-decoration: none;
 }
 
-footer div.direitos {
+div.direitos {
     background-color: #101a23;
     width: 100%;
     margin-top: 15px;
@@ -424,5 +422,28 @@ footer div.direitos {
 
     figure.card-produto figcaption {
         font-size: 1em;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+    div.redes h2 {
+        margin-bottom: 10px;
+    }
+
+    div.redes i {
+        font-size: 2em;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    div.redes i::before {
+        width: 32px;
+    }
+
+    div.direitos {
+        grid-column-start: span 2;
     }
 }
