--- a/css/style.css
+++ b/css/style.css
@@ -153,15 +153,14 @@ div.conteudo-banner a {
     color: white;
     padding: 10px 30px;
     margin-top: 15px;
-    background-color: var(--azul-escuro);
-    border: 1px solid var(--azul-escuro);
+    background-color: #006494;
     border-radius: 15px;
     cursor: pointer;
     transition: .2s;
 }
 
 div.conteudo-banner a:hover {
-    background-color: var(--azul-claro);
+    background-color: #024666;
 }
 
 div.conteudo-banner a i {
@@ -216,6 +215,9 @@ figure.card-produto figcaption {
     font-size: 0.9em;
     margin-top: 25px;
     padding: 0 15px;
+    flex: 1;
+    display: flex;
+    align-items: end;
 }
 
 figure.card-produto p {
@@ -234,7 +236,7 @@ figure.card-produto button {
     width: 90%;
     border: 1px solid var(--azul-escuro);
     border-radius: 10px;
-    background-color: var(--azul-claro);
+    background-color: #006494;
     color: white;
     cursor: pointer;
     font-family: 'Inter', sans-serif;
@@ -330,16 +332,17 @@ section.contato > form input, form textarea {
 
 section.contato > form input[type=submit] {
     background-color: var(--azul-escuro);
+    border: 1px solid var(--azul-escuro);
     color: white;
-    border: 0;
-    padding: 8.5px;
+    padding: 7.5px;
     margin: 10px 0;
     cursor: pointer;
     transition: .2s;
 }
 
 section.contato > form input[type=submit]:hover {
-    background-color: var(--azul-claro);
+    background-color: white;
+    color: var(--azul-escuro);
 }
 
 /* Fim do formulário */
